<resources>
    <string name="app_name">BookWala</string>
    <string name="enter_email_message">Please Enter Your Mobile number</string>
    <string name="enter_email_hint">Enter Email or Mobile number</string>
    <string name="forgot_password_message">Forgot Your Password?</string>
    <string name="mobile_ver_msg">Mobile Number Verification</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="done">Done</string>
    <string name="select_cover_image">Select Front Cover Image of Book</string>
    <string name="categories_msg">Select Category</string>
    <string name="college">College</string>
    <string name="school">School</string>
    <string name="competitive">Competitive Exams</string>
    <string name="others">Others</string>

    <string name="title_msg">Book title</string>
    <string name="desc_msg">Add Description</string>
    <string name="subject_msg">Subject</string>
    <string name="class_msg">Class</string>
    <string name="price_msg">Enter Price</string>
    <string name="cover_image_msg">Cover Image</string>
    <string name="semester_msg">Semester</string>
    <string name="semester">Semester %d </string>
    <string name="done_msg">Almost Done!\nJust add\nDescription\nand Price</string>
    <string name="book_details_label">Book Details</string>
    <string name="author_label">Author</string>
    <string name="price_label">Price</string>
    <string name="subject_label">Subject</string>
    <string name="chat_with_seller">Chat with seller</string>
    <string name="discover">Discover</string>
    <string name="chat">Chat</string>
    <string name="sell">Sell</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <array name="class_seekbar_captions">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter Message</string>
</resources>
