<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background_slant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline12">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/blue"
                app:riv_corner_radius="10dp"
                app:riv_oval="false" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_button_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/school"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <com.simarjot.bookwala.LabeledEditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:hint="@string/title_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_seek_bar" />

        <com.simarjot.bookwala.LabeledEditText
            android:id="@+id/subject_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:hint="@string/subject_msg"
            app:layout_constraintBottom_toTopOf="@+id/done_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_et"
            app:layout_constraintVertical_bias="0.0" />

        <com.simarjot.bookwala.LabeledEditText
            android:id="@+id/author_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hint="Author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_et" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".07" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/level_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="34dp"
            android:padding="0dp"
            app:isb_indicator_color="@color/colorPrimary"
            app:isb_indicator_text_color="@color/white"
            app:isb_indicator_text_size="25sp"
            app:isb_max="12"
            app:isb_min="1"
            app:isb_only_thumb_draggable="false"
            app:isb_progress="1"
            app:isb_seek_smoothly="false"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_show_tick_marks_type="oval"
            app:isb_show_tick_texts="true"
            app:isb_thumb_color="@color/colorPrimary"
            app:isb_thumb_size="20dp"
            app:isb_tick_marks_color="#00636C"
            app:isb_tick_marks_size="6dp"
            app:isb_tick_texts_array="@array/class_seekbar_captions"
            app:isb_tick_texts_color="@color/black"
            app:isb_tick_texts_size="8dp"
            app:isb_ticks_count="12"
            app:isb_track_background_color="@color/colorPrimary"
            app:isb_track_background_size="1dp"
            app:isb_track_progress_color="@color/colorPrimary"
            app:isb_track_progress_size="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_tv" />

        <TextView
            android:id="@+id/level_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/class_msg"
            app:layout_constraintBottom_toTopOf="@+id/level_seek_bar"
            app:layout_constraintStart_toStartOf="@+id/level_seek_bar"
            app:layout_constraintTop_toBottomOf="@+id/category_tv"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/subject_tv"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/level_type_tv"
            app:layout_constraintStart_toEndOf="@+id/level_type_tv"
            app:layout_constraintTop_toTopOf="@+id/level_type_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>