<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simarjot.bookwala.Categories">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img"
        app:layout_constraintHeight_percent="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_msg"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imagebar_guide_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imagebar_guide_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".23"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imagebar_guide_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".87"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="00dp"
        android:layout_height="00dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imagebar_guide_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagebar_guide_up"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/competitive"
                app:layout_constraintEnd_toEndOf="@+id/school"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="@+id/competitive"
                app:layout_constraintTop_toBottomOf="@+id/competitive" />

            <ImageButton
                android:id="@+id/school"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/school"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/competitive"
                app:layout_constraintEnd_toStartOf="@+id/college"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/college"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/college"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/other"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/school"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/competitive"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/competetive"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/other"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/school"
                />

            <Button
                android:id="@+id/college_tick"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tick_in_circle"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@+id/college"
                app:layout_constraintTop_toTopOf="@+id/college" />

            <Button
                android:id="@+id/competitive_tick"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tick_in_circle"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@+id/competitive"
                app:layout_constraintTop_toTopOf="@+id/competitive" />

            <Button
                android:id="@+id/others_tick"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tick_in_circle"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@+id/other"
                app:layout_constraintTop_toTopOf="@+id/other" />

            <Button
                android:id="@+id/school_tick"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tick_in_circle"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="@+id/school"
                app:layout_constraintTop_toTopOf="@+id/school" />

            <ImageButton
                android:id="@+id/other"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/others"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/competitive"
                app:layout_constraintTop_toBottomOf="@+id/college" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/school"
                app:layout_constraintEnd_toEndOf="@+id/school"
                app:layout_constraintStart_toStartOf="@+id/school"
                app:layout_constraintTop_toBottomOf="@+id/school" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/college"
                app:layout_constraintEnd_toEndOf="@+id/college"
                app:layout_constraintStart_toStartOf="@+id/college"
                app:layout_constraintTop_toBottomOf="@+id/college" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/others"
                app:layout_constraintEnd_toEndOf="@+id/other"
                app:layout_constraintStart_toStartOf="@+id/other"
                app:layout_constraintTop_toBottomOf="@+id/other" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
